# internal/router/devices_router.go
@@ -15,13 +15,13 @@ func RegisterDevicesRoutes(r *gin.RouterGroup, container *dig.Container) {
 	router := r.Group("devices")
 	err := container.Invoke(func(devicesHandler *handler.DevicesHandler) {
 		// 创建
-		router.POST("/", middleware.Jwt(true), devicesHandler.Create)
+		router.POST("/device", middleware.Jwt(true), devicesHandler.Create)
 		// 更新
-		router.PUT("/:id", middleware.Jwt(true), devicesHandler.Update)
+		router.PUT("/device/:id", middleware.Jwt(true), devicesHandler.Update)
 		// 删除
-		router.DELETE("/", middleware.Jwt(true), devicesHandler.Delete)
+		router.DELETE("/device", middleware.Jwt(true), devicesHandler.Delete)
 		// feedback 数据
-		router.GET("/", middleware.Jwt(true), devicesHandler.List)
+		router.GET("/device", middleware.Jwt(true), devicesHandler.List)
 	})
 	if err != nil {
 		fmt.Printf("注入 handler 失败: %v\n", err)
